tests/snapshots/parse_errors__missing_lhs.snap
---
source: tests/parse_errors.rs
expression: merged
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print + 1;
   │       ┬  
   │       ╰── Expected primary
───╯



