tests/snapshots/parse_errors__rparens.snap
---
source: tests/parse_errors.rs
expression: merged
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1);
   │ ──┬──  ┬  
   │   ╰─────── This statement should be terminated with ;
   │        │  
   │        ╰── There should be a ; here
───╯



